# Basel-Blog

./: README.md  blog_design_v1.drawio
app/api/: README.md  db.sqlite3  pyproject.toml
app/api/blogs/: models.py  serializers.py  urls.py  views.py
app/api/blogs/migrations/: 0001_initial.py
app/api/core/: settings.py  urls.py
app/blogfront/: index.html  package.json  pnpm-lock.yaml
app/blogfront/src/: App.jsx  main.jsx
app/blogfront/src/components/: BlogCard.jsx  Blogs.jsx  Menu.jsx  ThemeSwitch.jsx  Title.jsx  navbar.jsx
app/blogfront/src/hooks/: useBlogs.jsx
app/blogfront/src/redux/: appSlice.js
app/blogfront/src/utils/: colorUtils.js  getBlogs.js
