[tool.poetry]
name = "blog-api"
version = "0.1.0"
description = ""
authors = ["Basel Mahmoud <basel21mahmoud@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
